# fwh_census_us

./: CLAUDE.md  README.md  USER_GUIDE.md  conftest.py  pyproject.toml  requirements.txt
src/census_us/: __init__.py  catalog.py  catalog.yaml
src/census_us/ffl/: census.ffl  census.json
src/census_us/handlers/: __init__.py
src/census_us/handlers/acs/: __init__.py  acs_handlers.py
src/census_us/handlers/acs/ffl/: census_acs.ffl
src/census_us/handlers/downloads/: __init__.py  download_handlers.py
src/census_us/handlers/downloads/ffl/: census_operations.ffl
src/census_us/handlers/ingestion/: __init__.py  ingestion_handlers.py
src/census_us/handlers/publish/: __init__.py  publish_handlers.py
src/census_us/handlers/shared/: __init__.py  census_utils.py
src/census_us/handlers/summary/: __init__.py  summary_handlers.py
src/census_us/handlers/tiger/: __init__.py  tiger_handlers.py
src/census_us/handlers/vocab/: __init__.py  vocab_handlers.py
src/census_us/handlers/vulnerability/: svi_handlers.py
src/census_us/tools/: README.md  __init__.py  acs-extract.sh  acs_extract.py  download.py  join-geo.sh  join_geo.py  tiger-extract.sh  tiger_extract.py
src/census_us/tools/_lib/: __init__.py  acs_extractor.py  attribution.py  db_ingest.py  downloader.py  indicators.py  maps.py  mapsearch.py  metrics.py  publish.py  storage.py  summary_builder.py  svi.py  tiger_extractor.py
tests/: conftest.py  test_catalog_manifest.py  test_census_handlers.py  test_indicators_and_time_maps.py  test_ingestion_handlers.py  test_national_county_map.py  test_publish_merge.py
(+7 files in other folders)
