[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "census-us"
version = "0.1.0"
description = "US Census ACS demographics + TIGER county shapefile workflows for Facetwork"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Ralph Lemke"}]
keywords = ["facetwork", "ffl", "census", "acs", "tiger", "demographics", "geospatial"]

dependencies = [
    "facetwork>=0.31.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]
mongodb = [
    "pymongo>=4.0",
]
shapefiles = [
    "shapely>=2.0",
    "pyshp>=2.3",
]

[project.urls]
Repository = "https://github.com/rlemke/fwh_census_us"

[project.entry-points."facetwork.examples"]
census-us = "census_us:example"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
census_us = [
    "ffl/*.ffl",
    "ffl/*.json",
    "handlers/**/ffl/*.ffl",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "E402", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/census_us/handlers"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
